Add group student sessions
